--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=drop-and-create
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/TrabajoFinal
 spring.datasource.username=postgres
-spring.datasource.password=lt290502
+spring.datasource.password=root
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
