--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=drop-and-create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/TrabajoFinal
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=lt290502
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
