--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/TrabajoFinal
+spring.datasource.url=jdbc:postgresql://localhost/demoIdealPC
 spring.datasource.username=postgres
-spring.datasource.password=deigo465
+spring.datasource.password=root
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
