--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.show-sql=false
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/demoIdealPC
 spring.datasource.username=postgres
-spring.datasource.password=lt290502
+spring.datasource.password=root
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
